--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node build/server.js",
     "test": "vitest",
+    "test:run": "vitest run",
     "test:watch": "vitest --watch"
   },
   "keywords": [],
