--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,14 +1,18 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // File Layout
+    // // 入力ファイルと出力ファイルの場所
     "rootDir": "./src",
     "outDir": "./build",
+    // import を綺麗に使うため
     "esModuleInterop": true,
+    // Node.js の標準モジュールを使えるようにする
+    "types": ["node"],
 
     // Environment Settings
-    // See also https://aka.ms/tsconfig/module
+    // Node 用のモジュールシステム
     "module": "commonjs",
+    // 出力する JavaScript のバージョン
     "target": "es6",
     //"types": [],
     // For nodejs:
@@ -34,13 +38,16 @@
     // "noPropertyAccessFromIndexSignature": true,
 
     // Recommended Options
+    // 厳格モード
     "strict": true,
     //"jsx": "react-jsx",
     //"verbatimModuleSyntax": true,
     //"isolatedModules": true,
     //"noUncheckedSideEffectImports": true,
     //"moduleDetection": "force",
-    "skipLibCheck": true,
+    // ライブラリの型チェックはスキップして高速化
+    "skipLibCheck": true
   },
+  // このフォルダ内の .ts を全部 TS の対象にする
   "include": ["src/**/*"]
 }
